# lakectf-2022

finals/crypto-do-less/: Dockerfile  challenge.yml  compose.yaml  dealer.py  player.py  pub0.pem  pub1.pem  pub2.pem  pub3.pem  pub4.pem  run  server.py  solve.py
finals/crypto-fishback/: .env  Dockerfile  README.md  bot.py  challenge.yml  docker-compose.yml  pyproject.toml  run.sh  server.py  wordlist.txt
finals/crypto-fishback/writeup/: exploit.py
finals/crypto-samado/: Dockerfile  challenge.yml  docker-compose.yml  samado.py  secret.py  solution.py
finals/misc-V/: challenge.yml
finals/misc-abnodal-maze/: Dockerfile  Dockerfile0  Dockerfile1  README  challenge.yml  compose.yaml  description.txt  flag_lv0.txt  flag_lv1.txt  run.py  run.sh  run0  run1  utils.py
finals/misc-tiff-luck/: README  challenge  challenge.yml  description.txt
finals/pwn-i-hate-french/: Dockerfile  challenge.yml  compose.yaml  flag  solve.py
finals/pwn-paccheri/: Dockerfile.flag  Dockerfile.noflag  TODO  challenge.yml  compose.yaml  flag  postal_codes  pow.py  prova.c  prova_functioning.c  solve.py
finals/rev-camipral/: challenge.yml  compose.yaml
finals/rev-fun-for-functional/: challenge.yml
finals/rev-tiny-hashes/: Makefile  challenge.yml  hash  main.c  x.py
finals/web-calc-you-later/: Dockerfile  README.md  challenge.yml  flag  secret  (+4 more)
finals/web-carboncredit-suisse/: .env  Dockerfile.bot  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml
finals/web-carboncredit-suisse/src/: __init__.py  bot.py  index.html
finals/web-carboncredit-suisse/writeup/: exploit.py
(+346 files in other folders)
