[tool.poetry]
name = "fishback"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
PGPy = "^0.5.4"
cryptography = "<38.0.0"  # https://github.com/SecurityInnovation/PGPy/issues/402

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
